# onoff

./: .gitignore  Cargo.toml
onoff/: Cargo.toml
onoff-arm/: Cargo.toml
onoff-arm/src/: block_br.rs  context.rs  inst.rs  lib.rs  mem.rs  optimizer.rs  prepass.rs  translate.rs
onoff-core/: Cargo.toml
onoff-core/src/: error.rs
onoff-horizon/: Cargo.toml
onoff-horizon/src/kernel/: context.rs  mod.rs  process.rs  thread.rs
onoff-vfs/: Cargo.toml
onoff-vfs/src/: ctr_reader.rs  file.rs  lib.rs  nca.rs  nso.rs  partition.rs  pfs0.rs  xts_reader.rs
onoff/src/: main.rs
