[workspace]
resolver = "2"
members = [
    "onoff", "onoff-arm", "onoff-core",
    "onoff-horizon"
, "onoff-vfs"]

[workspace.dependencies]
# onoff
onoff-core = { path = "onoff-core" }

# crypto
aes = "0.8.3"
xts-mode = "0.5.1"
ctr = "0.9.2"

# utilities
vfs = "0.10.0"
smallvec = "2.0.0-alpha.3"
bitflags = "2.4.2"
sharded-slab = "0.1.7"
tracing = "0.1.40"
bytes = "1.5.0"
lru = "0.12.2"

# compression
lz4_flex = "0.11.2"
zip = "0.6.6"

# jit
cranelift = "0.104.0"
cranelift-native = "0.104.0"
cranelift-jit = "0.104.0"
cranelift-module = "0.104.0"

memoffset = "0.9.0"

[workspace.dependencies.tokio]
version = "1.35.1"
features = []
