[package]
name = "onoff-arm"
version = "0.1.0"
edition = "2021"

[dependencies]
onoff-core.workspace = true

memoffset.workspace = true

smallvec.workspace = true
lru.workspace = true

# jit
cranelift.workspace = true
cranelift-native.workspace = true
cranelift-jit.workspace = true
cranelift-module.workspace = true